General cleanup, update config
- Register all structure types in StructureTypeManager.
- Add `enabled` option to structures for config.